--- a/expo/package.json
+++ b/expo/package.json
@@ -23,7 +23,8 @@
         "react-native-screens": "4.11.1",
         "react-native-video": "6.14.1",
         "react-native-web": "0.20.0",
-        "ua-parser-js": "2.0.3"
+        "ua-parser-js": "2.0.3",
+        "use-debounce": "^10.0.5"
     },
     "devDependencies": {
         "@babel/core": "7.27.4",
