--- a/expo/app.json
+++ b/expo/app.json
@@ -40,12 +40,9 @@
     "name": "snowstream",
     "slug": "snowstream",
     "orientation": "landscape",
-    "androidNavigationBar": {
-      "visible": "sticky-immersive"
-    },
     "android": {
       "package": "com.simplepathstudios.snowstream",
-      "edgeToEdgeEnabled": false
+      "edgeToEdgeEnabled": true
     },
     "ios": {
       "bundleIdentifier": "com.simplepathstudios.snowstream"
