--- a/expo/package.json
+++ b/expo/package.json
@@ -1,6 +1,6 @@
 {
     "name": "snowstream",
-    "version": "0.13.8",
+    "version": "0.13.9",
     "main": "expo-router/entry",
     "dependencies": {
         "@react-native-community/slider": "4.5.7",
@@ -8,6 +8,7 @@
         "expo": "53.0.19",
         "expo-build-properties": "0.14.8",
         "expo-image": "2.3.2",
+        "expo-keep-awake": "~14.1.4",
         "expo-linking": "7.1.7",
         "expo-router": "5.1.3",
         "expo-secure-store": "14.2.3",
