--- a/web-server/requirements.txt
+++ b/web-server/requirements.txt
@@ -9,6 +9,7 @@ psycopg2-binary==2.9.7
 pytest==8.3.5
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
+qrcode[pil]==8.2
 requests==2.31.0
 SQLAlchemy==2.0.19
 themoviedb[sync]==1.0.2
