--- a/expo/package.json
+++ b/expo/package.json
@@ -3,7 +3,7 @@
     "version": "0.14.8",
     "main": "expo-router/entry",
     "dependencies": {
-        "@react-native-community/slider": "4.5.7",
+        "@react-native-assets/slider": "^11.0.8",
         "axios": "1.9.0",
         "expo": "53.0.19",
         "expo-build-properties": "0.14.8",
