--- a/expo/package.json
+++ b/expo/package.json
@@ -5,20 +5,21 @@
     "dependencies": {
         "@react-native-assets/slider": "^11.0.8",
         "axios": "1.9.0",
-        "expo": "53.0.19",
+        "expo": "53.0.20",
         "expo-build-properties": "0.14.8",
-        "expo-image": "2.3.2",
+        "expo-constants": "^17.1.7",
+        "expo-image": "2.4.0",
         "expo-keep-awake": "~14.1.4",
         "expo-linking": "7.1.7",
-        "expo-router": "5.1.3",
+        "expo-router": "5.1.4",
         "expo-secure-store": "14.2.3",
-        "expo-splash-screen": "0.30.9",
-        "react": "19.0.0",
-        "react-dom": "19.0.0",
+        "expo-splash-screen": "0.30.10",
+        "react": "19.1.1",
+        "react-dom": "19.1.1",
         "react-native": "npm:react-native-tvos@0.79.5-0",
         "react-native-device-info": "14.0.4",
         "react-native-libmpv": "0.8.5",
-        "react-native-safe-area-context": "5.5.2",
+        "react-native-safe-area-context": "5.4.0",
         "react-native-screens": "4.11.1",
         "react-native-uuid": "^2.0.3",
         "react-native-video": "6.16.1",
@@ -29,7 +30,7 @@
     "devDependencies": {
         "@babel/core": "7.27.4",
         "@react-native-tvos/config-tv": "0.1.3",
-        "@types/react": "19.1.6",
+        "@types/react": "19.0.10",
         "typescript": "5.8.3"
     },
     "expo": {
