--- a/expo/package.json
+++ b/expo/package.json
@@ -3,7 +3,7 @@
     "version": "0.14.8",
     "main": "expo-router/entry",
     "dependencies": {
-        "@react-native-assets/slider": "^11.0.8",
+        "@react-native-community/slider": "4.5.7",
         "axios": "1.9.0",
         "expo": "53.0.20",
         "expo-build-properties": "0.14.8",
@@ -14,10 +14,9 @@
         "expo-router": "5.1.4",
         "expo-secure-store": "14.2.3",
         "expo-splash-screen": "0.30.10",
-        "react": "19.1.1",
-        "react-dom": "19.1.1",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
         "react-native": "npm:react-native-tvos@0.79.5-0",
-        "react-native-device-info": "14.0.4",
         "react-native-libmpv": "0.8.5",
         "react-native-safe-area-context": "5.4.0",
         "react-native-screens": "4.11.1",
