--- a/expo/package.json
+++ b/expo/package.json
@@ -4,7 +4,7 @@
     "main": "expo-router/entry",
     "dependencies": {
         "axios": "1.9.0",
-        "expo": "53.0.20",
+        "expo": "54.0.0-preview.12",
         "expo-build-properties": "0.14.8",
         "expo-constants": "^17.1.7",
         "expo-image": "2.4.0",
@@ -13,12 +13,12 @@
         "expo-router": "5.1.4",
         "expo-secure-store": "14.2.3",
         "expo-splash-screen": "0.30.10",
-        "react": "19.0.0",
-        "react-dom": "19.0.0",
-        "react-native": "npm:react-native-tvos@0.79.5-0",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "react-native": "npm:react-native-tvos@0.81.1-1",
         "react-native-libmpv": "0.8.9",
         "react-native-safe-area-context": "5.4.0",
-        "react-native-screens": "4.11.1",
+        "react-native-screens": "4.15.4",
         "react-native-uuid": "^2.0.3",
         "react-native-video": "6.16.1",
         "react-native-web": "0.20.0",
