--- a/expo/package.json
+++ b/expo/package.json
@@ -6,9 +6,9 @@
         "axios": "1.9.0",
         "expo": "54.0.0-preview.12",
         "expo-build-properties": "0.14.8",
-        "expo-constants": "^17.1.7",
+        "expo-constants": "17.1.7",
         "expo-image": "2.4.0",
-        "expo-keep-awake": "~14.1.4",
+        "expo-keep-awake": "14.1.4",
         "expo-linking": "7.1.7",
         "expo-router": "5.1.4",
         "expo-secure-store": "14.2.3",
@@ -17,13 +17,12 @@
         "react-dom": "19.1.0",
         "react-native": "npm:react-native-tvos@0.81.1-1",
         "react-native-libmpv": "0.8.9",
-        "react-native-safe-area-context": "5.4.0",
+        "react-native-safe-area-context": "5.6.1",
         "react-native-screens": "4.15.4",
-        "react-native-uuid": "^2.0.3",
+        "react-native-uuid": "2.0.3",
         "react-native-video": "6.16.1",
-        "react-native-web": "0.20.0",
-        "ua-parser-js": "2.0.3",
-        "use-debounce": "10.0.5"
+        "react-native-web": "0.21.1",
+        "use-debounce": "10.0.6"
     },
     "devDependencies": {
         "@babel/core": "7.27.4",
