--- a/expo/package.json
+++ b/expo/package.json
@@ -4,20 +4,20 @@
     "main": "expo-router/entry",
     "dependencies": {
         "axios": "1.9.0",
-        "expo": "54.0.0-preview.12",
-        "expo-build-properties": "0.14.8",
-        "expo-constants": "17.1.7",
-        "expo-image": "2.4.0",
-        "expo-keep-awake": "14.1.4",
-        "expo-linking": "7.1.7",
-        "expo-router": "5.1.4",
-        "expo-secure-store": "14.2.3",
-        "expo-splash-screen": "0.30.10",
+        "expo": "54.0.0-preview.13",
+        "expo-build-properties": "~1.0.7",
+        "expo-constants": "~18.0.7",
+        "expo-image": "~3.0.6",
+        "expo-keep-awake": "~15.0.6",
+        "expo-linking": "~8.0.6",
+        "expo-router": "~6.0.0-preview.13",
+        "expo-secure-store": "~15.0.6",
+        "expo-splash-screen": "~31.0.7",
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-native": "npm:react-native-tvos@0.81.1-1",
         "react-native-libmpv": "0.8.9",
-        "react-native-safe-area-context": "5.6.1",
+        "react-native-safe-area-context": "^5.6.1",
         "react-native-screens": "4.15.4",
         "react-native-uuid": "2.0.3",
         "react-native-video": "6.16.1",
@@ -27,8 +27,8 @@
     "devDependencies": {
         "@babel/core": "7.27.4",
         "@react-native-tvos/config-tv": "0.1.3",
-        "@types/react": "19.0.10",
-        "typescript": "5.8.3"
+        "@types/react": "~19.1.10",
+        "typescript": "~5.9.2"
     },
     "expo": {
         "install": {
