--- a/expo/package.json
+++ b/expo/package.json
@@ -19,6 +19,7 @@
         "react-native": "npm:react-native-tvos@0.81.4-0",
         "react-native-safe-area-context": "5.6.1",
         "react-native-screens": "4.16.0",
+        "react-native-snowui": "^1.0.12",
         "react-native-uuid": "2.0.3",
         "react-native-video": "6.16.1",
         "react-native-web": "0.21.1",
