--- a/expo/package.json
+++ b/expo/package.json
@@ -13,13 +13,13 @@
         "expo-linking": "8.0.8",
         "expo-router": "6.0.5",
         "expo-secure-store": "15.0.7",
+        "expo-snowui": "1.2.2",
         "expo-splash-screen": "31.0.10",
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-native": "npm:react-native-tvos@0.81.4-0",
         "react-native-safe-area-context": "5.6.1",
         "react-native-screens": "4.16.0",
-        "react-native-snowui": "1.2.18",
         "react-native-uuid": "2.0.3",
         "react-native-video": "6.16.1",
         "react-native-web": "0.21.1",
