--- a/web-server/requirements.txt
+++ b/web-server/requirements.txt
@@ -3,7 +3,8 @@ cloudscraper==1.2.71
 fastapi[all]==0.104.1
 gunicorn==20.1.0
 lxml==4.9.3
-passlib[bcrypt]==1.7.4
+passlib==1.7.4
+bcrypt==4.3.0
 pika==1.3.2
 psycopg2-binary==2.9.7
 pytest==8.3.5
