--- a/expo/package.json
+++ b/expo/package.json
@@ -4,6 +4,7 @@
     "main": "expo-router/entry",
     "dependencies": {
         "axios": "1.12.2",
+        "babel-plugin-module-resolver": "^5.0.2",
         "expo": "54.0.7",
         "expo-build-properties": "1.0.8",
         "expo-constants": "18.0.8",
