--- a/expo/package.json
+++ b/expo/package.json
@@ -4,15 +4,14 @@
     "main": "expo-router/entry",
     "dependencies": {
         "axios": "1.12.2",
-        "babel-plugin-module-resolver": "^5.0.2",
-        "expo": "54.0.7",
-        "expo-build-properties": "1.0.8",
-        "expo-constants": "18.0.8",
-        "expo-image": "3.0.8",
+        "expo": "^54.0.12",
+        "expo-build-properties": "^1.0.9",
+        "expo-constants": "^18.0.9",
+        "expo-image": "^3.0.9",
         "expo-keep-awake": "15.0.7",
         "expo-libmpv": "0.2.5",
         "expo-linking": "8.0.8",
-        "expo-router": "6.0.5",
+        "expo-router": "^6.0.10",
         "expo-secure-store": "15.0.7",
         "expo-snowui": "1.3.5",
         "expo-splash-screen": "31.0.10",
