--- a/expo/package.json
+++ b/expo/package.json
@@ -21,7 +21,8 @@
         "react-native-uuid": "2.0.3",
         "react-native-video": "6.17.0",
         "react-native-web": "0.21.1",
-        "use-debounce": "10.0.6"
+        "use-debounce": "10.0.6",
+        "valtio": "^2.1.8"
     },
     "devDependencies": {
         "@babel/core": "7.28.4",
