--- a/expo/package.json
+++ b/expo/package.json
@@ -1,6 +1,6 @@
 {
     "name": "snowstream",
-    "version": "1.2.9",
+    "version": "1.2.10",
     "dependencies": {
         "axios": "1.12.2",
         "expo": "^54.0.13",
@@ -8,7 +8,7 @@
         "expo-constants": "^18.0.9",
         "expo-image": "^3.0.9",
         "expo-keep-awake": "15.0.7",
-        "expo-libmpv": "0.3.0",
+        "expo-libmpv": "^0.3.1",
         "expo-linking": "8.0.8",
         "expo-secure-store": "15.0.7",
         "expo-snowui": "^1.5.17",
