--- a/expo/package.json
+++ b/expo/package.json
@@ -1,6 +1,6 @@
 {
     "name": "snowstream",
-    "version": "1.2.11",
+    "version": "1.3.0",
     "dependencies": {
         "axios": "1.12.2",
         "expo": "^54.0.13",
@@ -11,7 +11,7 @@
         "expo-libmpv": "^0.3.1",
         "expo-linking": "8.0.8",
         "expo-secure-store": "15.0.7",
-        "expo-snowui": "^1.5.17",
+        "expo-snowui": "1.5.19",
         "expo-splash-screen": "31.0.10",
         "react": "19.1.0",
         "react-dom": "19.1.0",
