--- a/expo/app.json
+++ b/expo/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "version": "1.3.0",
+    "version": "1.3.1",
     "scheme": "com.simplepathstudios.snowstream",
     "newArchEnabled": true,
     "plugins": [
@@ -24,7 +24,7 @@
     ],
     "splash": {
       "image": "./assets/icon/splash.png",
-      "backgroundColor": "#ff9a3f"
+      "backgroundColor": "#FD6F01"
     },
     "icon": "./assets/icon/appicon.png",
     "name": "snowstream",
