--- a/expo/package.json
+++ b/expo/package.json
@@ -9,12 +9,11 @@
         "expo-constants": "^18.0.9",
         "expo-image": "^3.0.9",
         "expo-keep-awake": "15.0.7",
-        "expo-libmpv": "^0.3.1",
+        "expo-libmpv": "0.3.3",
         "expo-linking": "8.0.8",
         "expo-secure-store": "15.0.7",
-        "expo-snowui": "1.5.26",
+        "expo-snowui": "^1.5.27",
         "expo-splash-screen": "31.0.10",
-        "expo-updates": "^29.0.12",
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-native": "npm:react-native-tvos@0.81.4-0",
