--- a/expo/package.json
+++ b/expo/package.json
@@ -1,6 +1,6 @@
 {
     "name": "snowstream",
-    "version": "1.3.7",
+    "version": "1.3.8",
     "dependencies": {
         "@sentry/react-native": "^7.4.0",
         "axios": "1.12.2",
@@ -14,6 +14,7 @@
         "expo-secure-store": "15.0.7",
         "expo-snowui": "^1.5.27",
         "expo-splash-screen": "31.0.10",
+        "expo-toast": "^1.0.3",
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-native": "npm:react-native-tvos@0.81.4-0",
