--- a/expo/package.json
+++ b/expo/package.json
@@ -1,6 +1,6 @@
 {
     "name": "snowstream",
-    "version": "1.3.12",
+    "version": "1.3.13",
     "dependencies": {
         "@sentry/react-native": "7.4.0",
         "axios": "1.12.2",
@@ -9,7 +9,7 @@
         "expo-constants": "18.0.9",
         "expo-image": "^3.0.10",
         "expo-keep-awake": "15.0.7",
-        "expo-libmpv": "^0.3.7",
+        "expo-libmpv": "0.3.8",
         "expo-linking": "8.0.8",
         "expo-secure-store": "15.0.7",
         "expo-snowui": "^1.5.28",
